--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm run test
+    - run: cd checkout; npm install
+    - run: cd checkout; npm run build --if-present
+    - run: cd checkout; npm run test
