--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd checkout; npm install
+    - run: npm install
+    working-directory: checkout
     - run: cd checkout; npm run build --if-present
+    working-directory: checkout
     - run: cd checkout; npm run test
+    working-directory: checkout
