--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,20 @@ jobs:
       working-directory: checkout
     - run: npm run build --if-present
       working-directory: checkout
+    # - run: npm run test
+      # working-directory: checkout
+
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        # cache: 'npm'
+        path: node-api
+    - name: npm install
+      run: npm install
+      working-directory: checkout
+    - run: npm run build --if-present
+      working-directory: checkout
     - run: npm run test
       working-directory: checkout
