--- a/checkout/package.json
+++ b/checkout/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "bootstrap": "^4.5.0",
+    "path-parse": "^1.0.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
