--- a/checkout/package.json
+++ b/checkout/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.5.0",
     "path-parse": "^1.0.7",
     "rxjs": "~6.6.0",
+    "tar": "^4.4.19",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
