--- a/checkout/package.json
+++ b/checkout/package.json
@@ -26,7 +26,8 @@
     "rxjs": "~6.6.0",
     "tar": "^4.4.19",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "follow-redirects": "1.14.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
@@ -37,7 +38,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.3.14",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
