--- a/checkout/package.json
+++ b/checkout/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@adyen/adyen-web": "^4.5.0",
+    "@adyen/adyen-web": "^5.8.0",
     "@angular/animations": "~11.0.3",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
@@ -22,9 +22,12 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "bootstrap": "^4.5.0",
+    "path-parse": "^1.0.7",
     "rxjs": "~6.6.0",
+    "tar": "^4.4.19",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "follow-redirects": "1.14.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
@@ -35,7 +38,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.3.14",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -43,6 +46,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "jszip": "~3.7.1"
   }
 }
