--- a/node-api/package.json
+++ b/node-api/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@adyen/api-library": "^8.1.0",
+    "@adyen/api-library": "^10.2.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
-    "uuid": "^8.3.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuidv4": "^6.1.1"
   }
 }
