--- a/checkout/package.json
+++ b/checkout/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines": {
+    "node": ">=15.0.0 || <=17.0.0"
   },
   "private": true,
   "dependencies": {
