--- a/node-api/package.json
+++ b/node-api/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app"
   },
+  "engines": {
+    "node": ">=15.0.0 || <=17.0.0"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
