--- a/checkout/package.json
+++ b/checkout/package.json
@@ -25,12 +25,13 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "bootstrap": "^4.5.0",
+    "follow-redirects": "1.14.8",
+    "node-forge": "^1.3.1",
     "path-parse": "^1.0.7",
     "rxjs": "~6.6.0",
     "tar": "^4.4.19",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "follow-redirects": "1.14.8"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
