--- a/checkout/package.json
+++ b/checkout/package.json
@@ -31,7 +31,8 @@
     "rxjs": "~6.6.0",
     "tar": "^4.4.19",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "ansi-regex": ">=5.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
@@ -51,6 +52,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2",
-    "jszip": "~3.7.1"
+    "jszip": "~3.7.1",
+    "ansi-regex": ">=5.0.1"
   }
 }
