--- a/checkout/angular.json
+++ b/checkout/angular.json
@@ -20,7 +20,7 @@
             "outputPath": "dist/checkout",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": "zone.js",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
@@ -67,26 +67,26 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "checkout:build",
-            "port": 8080
+            "port": 8080,
+            "buildTarget": "checkout:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "checkout:build:production"
+              "buildTarget": "checkout:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "checkout:build"
+            "buildTarget": "checkout:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": "zone.js",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
