--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,21 @@ name: Node.js CI
 
 on:
   push:
-  pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - README.md
+      - .gitignore
+      - .gitpod.yml
+      - LICENSE    
+  pull_request_target:
+    branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - README.md
+      - .gitignore
+      - .gitpod.yml
+      - LICENSE    
 
 jobs:
   build:
@@ -15,7 +28,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [17.x]
+        node-version: [20.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -29,8 +42,6 @@ jobs:
       working-directory: checkout
     - run: npm run build --if-present
       working-directory: checkout
-    # - run: npm run test
-      # working-directory: checkout
 
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
