Run actions on pull_request

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,7 +10,7 @@ on:
       - .gitignore
       - .gitpod.yml
       - LICENSE    
-  pull_request_target:
+  pull_request:
     branches: [ main ]
     paths-ignore:
       - '**/README.md'
