--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
       - .gitignore
       - .gitpod.yml
       - LICENSE    
-  pull_request_target:
+  pull_request:
     branches: [ main ]
     paths-ignore:
       - '**/README.md'
