--- a/checkout/package.json
+++ b/checkout/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@adyen/adyen-web": "^5.40.0",
-    "@angular/animations": "~13.3.11",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
-    "@angular/forms": "~13.3.11",
-    "@angular/localize": "~13.3.11",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
+    "@adyen/adyen-web": "5.60.0",
+    "@angular/animations": "~18.2.2",
+    "@angular/common": "~18.2.2",
+    "@angular/compiler": "~18.2.2",
+    "@angular/core": "~18.2.2",
+    "@angular/forms": "~18.2.2",
+    "@angular/localize": "~18.2.2",
+    "@angular/platform-browser": "~18.2.2",
+    "@angular/platform-browser-dynamic": "~18.2.2",
+    "@angular/router": "~18.2.2",
     "bootstrap": "^4.5.0",
     "follow-redirects": "1.15.6",
     "node-forge": "^1.3.1",
@@ -34,9 +34,9 @@
     "ansi-regex": ">=5.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.9",
-    "@angular/cli": "~13.3.9",
-    "@angular/compiler-cli": "~13.3.11",
+    "@angular-devkit/build-angular": "~18.2.2",
+    "@angular/cli": "~18.2.2",
+    "@angular/compiler-cli": "~18.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -50,7 +50,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4",
+    "typescript": "~5.4.5",
     "jszip": "~3.8.0",
     "ansi-regex": ">=5.0.1"
   }
