--- a/node-api/package.json
+++ b/node-api/package.json
@@ -8,7 +8,7 @@
     "start": "node app"
   },
   "engines": {
-    "node": ">=15.0.0 || <=17.0.0"
+    "node": ">=20.0.0"
   },
   "author": "",
   "license": "MIT",
