--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
     "cpus": 4
   },
   "updateContentCommand": "npm install -g @angular/cli",
+  "postCreateCommand": "cd checkout && npm install && cd .. && cd node-api && npm install && cd ..",
   "postAttachCommand": "bash .devcontainer/setup.sh",
   "portsAttributes": {
     "8080": {
